# arbitrage-betting

./: Cargo.toml  README.md
src/: main.rs  models.rs  parser.rs
src/parsers/: bet_safe.rs  c_bet.rs  http_client_extensions.rs  oly_bet.rs  top_sport.rs
